# AgentShell

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: ARCHITECTURE.md  OPENCLAW.md
src/: app.rs  clients.rs  config.rs  contracts.rs  lib.rs  main.rs  state.rs  web.rs  workflow.rs
