[package]
name = "agent-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "AgentShell: thin Rust host layer for OpenClaw-based agent setups"
repository = "https://github.com/Josue7211/AgentShell"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }

