[package]
name = "agent-shell"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "AgentShell: thin Rust host layer for OpenClaw-based agent setups"
repository = "https://github.com/Josue7211/AgentShell"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
